# Data-Sonification

./: .gitignore  LICENSE  README.md  install.py
sonify-plot/: demo_spatial.py  pyproject.toml
sonify-plot/src/sonify_plot/: __init__.py  extract.py  wrapper.py
sonify-plot/tests/: test_core.py
sonify-synth/src/sonify_synth/: __init__.py  engine.py  instruments.py  sonification.py  utils.py
